# query_generated_file

./: BUILD.bazel  Readme.md  expand_template.bzl  header.h.tpl  hello-lib.cc
